# kiryall

./: README.md
safer/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
safer/configs/: config.py  model_config_aug.yaml  model_config_no_aug.yaml
safer/scripts/: annotate_helper.py  check_plates.py  run_pipeline.py  train_yolo.py
safer/src/detection/: yolo_detector.py
safer/src/grouping/: exif_grouper.py
safer/src/ocr/: ocr_engine.py
safer/src/pipeline/: batch_processor.py  main_pipeline.py
safer/src/postprocessing/: text_cleaner.py  validator.py
safer/src/preprocessing/: image_loader.py  image_utils.py
safer/src/renaming/: renamer.py
safer/src/reporting/: report_generator.py
safer/src/utils/: data_utils.py  yaml_loader.py
safer/tests/: test_pipeline.py
safer/ui/: streamlit_app.py
