[project]
name = "safer"
version = "0.1.0"
description = "Offline pipeline for Sefer plate detection, OCR and batch renaming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.3.0",
  "paddleocr>=2.8.0",
  "paddlepaddle>=2.6.0; platform_system != 'Darwin'",
  "opencv-python>=4.10.0",
  "pillow>=10.0.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "piexif>=1.1.3",
  "streamlit>=1.45.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
